Update global styles. Fix premanent verical scrollbar

--- a/src/style/_base.scss
+++ b/src/style/_base.scss
@@ -18,6 +18,7 @@ body {
   font-weight: 400;
   background-color: #dfe6e9;
   color: #2d3436;
+  overflow-y: scroll;
 }
 
 #app {
